reqested payload validation and authorization middleware
