# server/routes/auth.routes.js
@@ -1,10 +1,11 @@
 const express = require('express');
+const { checkDuplicateUsernameOrEmail } = require('../middlewares');
 
 const router = express.Router();
 
 const authController = require('../controllers/auth.controller');
 
-router.post('/signup', authController.signup);
+router.post('/signup', checkDuplicateUsernameOrEmail, authController.signup);
 
 router.post('/signin', authController.signin);
 
